[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
db = { path = "../db" }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}
env = "1.0.1"
uuid = "1.18.1"
actix-ws = "0.3.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
